test/resolver/pass/resolve_extern_with_unsafe.ms
unsafe extern "C" proc foo();
