test/resolver/fail/resolve_extern_without_unsafe.ms
@extern("C") unsafe proc foo();
